correction on scroll, and align center for all paragraph

--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,6 @@ main {
 }
 .container p {
   margin-bottom: 40px;
-  text-align: center;
   
 }
 
